<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/filterSku"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:src="@drawable/filter_by" />

    <LinearLayout
        android:id="@+id/llcontent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#995aac82"
            android:gravity="center">

            <com.newsalesbeatApp.customview.CustomTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".35"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/sku"
                android:textColor="@android:color/white"
                app:myfont="GothamLight.otf" />

            <com.newsalesbeatApp.customview.CustomTextView
                android:visibility="gone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".3"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/brandname"
                android:textColor="@android:color/white"
                app:myfont="GothamLight.otf" />

            <com.newsalesbeatApp.customview.CustomTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:gravity="center"
                android:text="@string/price"
                android:textColor="@android:color/white"
                android:visibility="gone"
                app:myfont="GothamLight.otf" />
            <com.newsalesbeatApp.customview.CustomTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:gravity="center"
                android:text="@string/weight"
                android:textColor="@android:color/white"
                app:myfont="GothamLight.otf" />

            <com.newsalesbeatApp.customview.CustomTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".15"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/qnty"
                android:textColor="@android:color/white"
                app:myfont="GothamLight.otf" />

            <com.newsalesbeatApp.customview.CustomTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:gravity="center"
                android:text="@string/unit"
                android:textColor="@android:color/white"
                app:myfont="GothamLight.otf" />


        </LinearLayout>

        <com.cooltechworks.views.shimmer.ShimmerRecyclerView
            android:id="@+id/rvOrderList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:shimmer_demo_angle="20"
            app:shimmer_demo_child_count="10"
            app:shimmer_demo_grid_child_count="2"
            app:shimmer_demo_layout="@layout/layout_sample_view"
            app:shimmer_demo_layout_manager_type="linear_vertical" />

    </LinearLayout>

</RelativeLayout>