<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="1dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.newsalesbeatApp.customview.CustomTextView
            android:id="@+id/skuName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:fontFamily="@font/gothamlight"
            android:gravity="center|left"
            android:padding="1dp"
            android:text="@string/blanktext"
            android:textColor="@android:color/black" />

        <com.newsalesbeatApp.customview.CustomTextView
            android:id="@+id/brandName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1"
            android:fontFamily="@font/gothamlight"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/blanktext"
            android:textColor="@android:color/black" />

        <com.newsalesbeatApp.customview.CustomTextView
            android:id="@+id/brandPrice"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1"
            android:fontFamily="@font/gothamlight"
            android:gravity="center"
            android:text="@string/blanktext"
            android:textColor="@android:color/black"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edtQuantity"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight=".10"
            android:background="#F0F0F0"
            android:fontFamily="@font/gothamlight"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLines="1"
            android:padding="2dp"
            android:singleLine="true"
            android:textColor="@android:color/black" />


        <com.newsalesbeatApp.customview.CustomTextView
            android:id="@+id/tvUnit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".07"
            android:fontFamily="@font/gothamlight"
            android:gravity="center"
            android:hint="@string/kg"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAddToSkuList"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="vertical"
        android:visibility="gone">


        <com.newsalesbeatApp.customview.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/gothamlight"
            android:gravity="center"
            android:text="@string/addtoskulist" />


    </LinearLayout>


</androidx.cardview.widget.CardView>